<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E201041B"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/botonCrear"
        android:layout_width="150dp"
        android:layout_height="106dp"
        android:backgroundTint="#8B758FD3"
        android:text="@string/BotonCrear"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <Button
        android:id="@+id/botonInsertar"
        android:layout_width="150dp"
        android:layout_height="106dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8B758FD3"
        android:text="@string/BotonInsertar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonCrear" />

    <Button
        android:id="@+id/botonConsultar"
        android:layout_width="150dp"
        android:layout_height="106dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8B758FD3"
        android:text="@string/BotonConsultar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonInsertar" />

    <Button
        android:id="@+id/botonVolverAct2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#9C5F20"
        android:text="Volver a Activity 1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>